--- a/snippets/shipping-calculator.liquid
+++ b/snippets/shipping-calculator.liquid
@@ -146,7 +146,7 @@
 //            console.dir(e);
 //            console.dir(this);
             if (e.which === 13) {
-                // If ENTER was on Calculate button, then do not preventDefault behavior
+                // If ENTER was pressed on Calculate button, then do not preventDefault behavior
                 // and focus should remain on button after form submission, for UX consistency.
                 if (jQuery(this).is('[type="button"]')) {
                     var pollingLimit = 20;
@@ -154,12 +154,12 @@
                     setTimeout(function focusOnShippingBtn() {
                         // Focus on Calculate button only if focus was not moved to another element
                         if (jQuery('#shipping-calculator :focus').length == 0) {
-                            // Focus only if btn is re-enabled
+                            // Focus only if btn is re-enabled, i.e. shipping rate Ajax call completed.
                             if (ratesBtn.val() === ratesBtnEnabledLabel) {
                                 console.log('Focus on CALCULATE btn');
                                 ratesBtn.focus();
                             }
-                            else {
+                            else { // If btn not re-enabled yet, retry in 100ms... for 20 times max.
                                 if (!pollingLimit--)
                                     return;
                                 console.log('setTimeout for btn focus... ' + pollingLimit);
@@ -168,15 +168,16 @@
                         }
                     }, 300);
 
-                    return;
+                    return;  // exits enterKeyHandler()
                 }
+                // ENTER was not pressed on Calculate button...
                 // If zip field empty, focus on zip field
                 if (!jQuery.trim(jQuery('#address_zip').val())) {
-                    console.log('ENTER caught; preventDefault');
+                    console.log('ENTER caught; preventDefault; focus zip field');
                     e.preventDefault();
                     jQuery('#address_zip').focus();
                 }
-                else {
+                else { // If zip field not empty, get rates
                     console.log('ENTER caught; triggerHandler(click)');
                     e.preventDefault();
                     // Contrary to trigger(), triggerHandler only operates on first matched element
@@ -199,13 +200,14 @@
                     if (/zip/i.test(errorEl.text())) {
                         console.log('Highlighting zipcode field...');
                         errorEl.addClass('startingColor');
+                        // Clean up remaining class whenever elements lose focus
                         zipEl.on('blur', function removeTransitionClass() {
                             zipEl.removeClass('transitioning');
                             errorEl.removeClass('transitioning');
                         });
-                        // blur before focus so that error highlight activates even if focus was already on element
+                        // Call blur() before focus() so that error highlight activates even if focus was already on element
                         zipEl.addClass('address_zip__input--error').blur().focus();
-                        // return to normal focus highlight with a transition
+                        // Return to normal focus highlight with a transition
                         zipEl.addClass('transitioning');
                         // zip error message also changes color thru a transition
                         errorEl.addClass('transitioning');
