--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -128,6 +128,11 @@
             </div>
           {% endif %}
 
+          {% unless settings.shipping_calculator == 'Disabled' %}
+          <div class="cart-drawer__item">
+            {% include 'shipping-calculator' %}
+          </div>
+          {% endunless %}
         </div>
       </div>
     </div>
