--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -116,7 +116,7 @@
           <!-- Dien -->
           <!-- Only show GW option if enabled in settings -->
           {% if settings.show_gift_wrapping %}
-            <div class="cart-drawer__item">
+            <div class="cart-drawer__item cart-drawer__gift-wrap-container">
               {% include 'gift-wrapping' %}
             </div>
           {% endif %}
