--- a/sections/product-alternate-template.liquid
+++ b/sections/product-alternate-template.liquid
@@ -270,6 +270,9 @@
   </script>
 </div>
 
+{% comment %}
+Dien: Added blocks.
+{% endcomment %}
 {% schema %}
 {
   "name": "Product pages",
@@ -322,17 +325,29 @@
           "id": "custom_property_type",
           "label": "Type",
           "options": [
-            { "value": "text", "label": "Text"},
-            { "value": "number", "label": "Number"},
-            { "value": "file", "label": "File"},
-            { "value": "checkbox", "label": "Checkbox"}
+            { "value": "text", "label": "Text" },
+            { "value": "number", "label": "Number" },
+            { "value": "file", "label": "File" },
+            { "value": "checkbox", "label": "Checkbox" }
           ],
           "default": "text"
         },
         {
-        "type": "checkbox",
-        "id": "custom_property_required",
-        "label": "Required"
+          "type": "select",
+          "id": "custom_property_number_range",
+          "label": "Number Range",
+          "options": [
+            { "value": "positive_no_zero", "label": "Positive values, except zero" },
+            { "value": "positive", "label": "Positive values, including zero" },
+            { "value": "all_integers", "label": "Positive and negative values, including zero" }
+          ],
+          "info": "Applicable only if Type field is Number.",
+          "default": "positive_no_zero"
+        },
+        {
+          "type": "checkbox",
+          "id": "custom_property_required",
+          "label": "Required"
         }
       ]
     }
